--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,4 +33,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: my-app-artifact
-          path: my-artifacts
+          path: ExampleSrtifactVSCode/Program.cs
